<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/panel"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Panel_Prin" />

    <item
        android:id="@+id/registro"
        android:icon="@drawable/outline_how_to_reg_24"
        android:title="@string/title_registro" />

    <item
        android:id="@+id/mas"
        android:icon="@drawable/outline_add_circle_24"
        android:title="@string/title_mas" />

    <item
        android:id="@+id/mis_asistencias"
        android:icon="@drawable/outline_local_library_24"
        android:title="@string/title_informe_User" />

    <item
        android:id="@+id/perfil"
        android:icon="@drawable/outline_person_24"
        android:title="@string/title_perfil" />

</menu>